--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
     <link rel="icon" type="favicon" href="/ptdqc.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>MRBS - PT. Duraquipt Cemerlang</title>
+    <title>MRBS PT. Duraquipt Cemerlang</title>
   </head>
   <body>
     <div id="root"></div>
